--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,5 +1,8 @@
 <%= f.error_messages %>
 
+<p style="display:none2;">  NON USARE sostituito da asso_id
+  <%=h (f.codice) %></p>
+
 <div class="box tabular">
   <p><%= f.select :asso_id, (Asso.all.collect {|c| [c.ragione_sociale, c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_asso) %></p>
   <p><%= f.select :user_id, (User.all.collect {|c| [c.lastname + ' ' + c.firstname +  ' (' + c.login + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_user) %></p>
