--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -13,12 +13,12 @@
     <legend><%=l(:label_organization)%></legend>
     <p>
     <% unless @organization.asso.ragione_sociale.blank? %>
-      <em><%= link_to h(@organization.asso), asso_path(@organization.asso, :id => @organization.asso_id) %>
+      <em><%= link_to h(@organization.asso.to_s), asso_path(@organization.asso, :id => @organization.asso_id) %>
 </em>
       <br />
     <% end %>
     </p>
-    <p>
+    <p class="<%= 'power_user' unless @organization.havePowerUser %>">
       <%= l(:label_user) %>: <%= link_to h(@organization.user), user_path(@organization.user, :id => @organization.user_id) %>
     </p>
     <p>
