improve import data views

--- a/app/views/assos/_form.html.erb
+++ b/app/views/assos/_form.html.erb
@@ -3,8 +3,8 @@
 <div class="box tabular">
 
 
-<p style="display:none2;">  NON USARE
-  <%=h (f.codice) %></p>
+<p style="display:none2;">  NON USARE f.codice sostiuito da id ==> 
+  <%=h (f.object.codice) %></p>
 </p>
   
   <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
