--- a/app/views/cross_groups/index.html.erb
+++ b/app/views/cross_groups/index.html.erb
@@ -18,9 +18,9 @@
 <% @cross_groups.each do |cross_group| %>
   <tr class="<%= cycle 'odd', 'even' %>">
     <%#<td><%= link_to h(cross_group), cross_group_path(cross_group) % ></td> %>
-    <td><%= link_to(h(cross_group.asso), asso_path(cross_group.asso)) if !User.current.admin? %>
+    <td><%= link_to(h(cross_group.asso.to_s), asso_path(cross_group.asso)) if !User.current.admin? %>
     <%= link_to(h(cross_group.asso), edit_asso_path(cross_group.asso, :id => cross_group.asso_id)) if User.current.admin? %></td>
-    <td><%= link_to(h(cross_group.group_banner), edit_group_banner_path(cross_group.group_banner, :id => cross_group.group_banner_id))  if !User.current.admin? %>
+    <td><%= link_to(h(cross_group.group_banner), group_banner_path(cross_group.group_banner, :id => cross_group.group_banner_id))  if !User.current.admin? %>
     <%= link_to(h(cross_group.group_banner), edit_group_banner_path(cross_group.group_banner, :id => cross_group.group_banner_id))  if User.current.admin? %></td>
     <td align="center"><%= check_box_tag '', 1, cross_group.se_visibile, :disabled => 'disabled' %></td>
     <td class="buttons"><%= link_to('', edit_cross_group_path(cross_group), :class => 'icon icon-edit') if User.current.admin? %>
