--- a/app/views/editorial/home.html.erb
+++ b/app/views/editorial/home.html.erb
@@ -8,5 +8,11 @@
       <li><%= link_to "contact", contact_path %></li>
       <li><%= link_to "about", about_path %></li>
       <li><%= link_to "help", help_path %></li>
+      <li style="display: none;"><= link_to "registrazione", registrazione_path %></li>
+      <li style="display: none;"><= link_to "accedi", accedi_path %></li>
+      <li><%= link_to "ricerca", ricerca_path %></li>
+      <li><%= link_to "quesiti", quesiti_path %></li>
+      <li><%= link_to "quesito", quesito_path %></li>
+      <li><%= link_to "poniquesito", poniquesito_path %></li>
     </ul>
 
