--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -6,6 +6,7 @@
 
 <table class="list">
   <thead><tr>
+    <th>id</th>
     <th><%=l(:label_role)%></th>
     <th><%=l(:button_sort)%></th>
   <th></th>
@@ -13,18 +14,19 @@
   <tbody>
 <% for role in @roles %>
   <tr class="<%= cycle("odd", "even") %>">
-  <td><%= content_tag(role.builtin? ? 'em' : 'span', link_to(h(role.name), :action => 'edit', :id => role)) %></td>
-  <td align="center" style="width:15%;">
-  <% unless role.builtin? %>
-    <%= reorder_links('role', {:action => 'edit', :id => role}) %>
-  <% end %>
-  </td>
-  <td class="buttons">
-    <%= link_to(l(:button_delete), { :action => 'destroy', :id => role },
-                                  :method => :post,
-                                  :confirm => l(:text_are_you_sure),
-                                  :class => 'icon icon-del') unless role.builtin? %>
-  </td>
+    <td align="center" style="width:3%;"><%= h(role.id)%></td>
+    <td><%= content_tag(role.builtin? ? 'em' : 'span', link_to(h(role.name), :action => 'edit', :id => role)) %></td>
+    <td align="center" style="width:15%;">
+    <% unless role.builtin? %>
+      <%= reorder_links('role', {:action => 'edit', :id => role}) %>
+    <% end %>
+    </td>
+    <td class="buttons">
+      <%= link_to(l(:button_delete), { :action => 'destroy', :id => role },
+                                    :method => :post,
+                                    :confirm => l(:text_are_you_sure),
+                                    :class => 'icon icon-del') unless role.builtin? %>
+    </td>
   </tr>
 <% end %>
   </tbody>
