--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -6,6 +6,14 @@
 <p><%= setting_text_area :welcome_text, :cols => 60, :rows => 5, :class => 'wiki-edit' %></p>
 <%= wikitoolbar_for 'settings_welcome_text' %>
 
+<p><%= setting_text_area :welcome_text_fs, :cols => 60, :rows => 5, :class => 'wiki-edit' %></p>
+<%= wikitoolbar_for 'settings_welcome_text_fs' %>
+
+<p><%= setting_text_area :info_fs, :cols => 60, :rows => 5, :class => 'wiki-edit' %></p>
+<%= wikitoolbar_for 'settings_info_fs' %>
+
+<p><%= setting_check_box :info_promoted_fs %></p>
+
 <p><%= setting_text_field :attachment_max_size, :size => 6 %> <%= l(:"number.human.storage_units.units.kb") %></p>
 
 <p><%= setting_text_field :per_page_options, :size => 20 %><br />
