--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,14 +11,17 @@ h4, .wiki h3 {font-size: 13px;padding: 2px 10px 1px 0px;margin-bottom: 5px; bord
 #wrapper {background: white;}
 
 #top-menu {background: #2C4056; color: #fff; height:1.8em; font-size: 0.8em; padding: 2px 2px 0px 6px;}
-#top-menu ul {margin: 0;  padding: 0;}
-#top-menu li {
+#footer-menu {height:1.8em; font-size: 1em; padding: 2px 2px 0px 6px; text-align: center;
+margin-right: 0.5em;}
+#top-menu ul, #footer-menu ul {margin: 0;  padding: 0;}
+#top-menu li, #footer-menu li {
   float:left;
   list-style-type:none;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   white-space:nowrap;
 }
+#footer-menu li {margin-right: 10px;}
 #top-menu a {color: #fff; margin-right: 8px; font-weight: bold;}
 #top-menu #loggedas { float: right; margin-right: 0.5em; color: #fff; }
 
@@ -1018,7 +1021,7 @@ h2 img { vertical-align:middle; }
 
 /***** Media print specific styles *****/
 @media print {
-  #top-menu, #header, #main-menu, #sidebar, #footer, .contextual, .other-formats { display:none; }
+  #top-menu, #footer-menu, #header, #main-menu, #sidebar, #footer, .contextual, .other-formats { display:none; }
   #main { background: #fff; }
   #content { width: 99%; margin: 0; padding: 0; border: 0; background: #fff; overflow: visible !important;}
     #wiki_add_attachment { display:none; }
