--- a/app/views/mailer/fee.html.erb
+++ b/app/views/mailer/fee.html.erb
@@ -1,5 +1,5 @@
 <p>Messaggio gestione degli abbonamenti inviato da Fiscosport<br />
-<h2> <%= l(@type) %></h2>
+<h2> <%= l(@fee_type) %></h2>
 <hr />
 Fiscosport URL: <%= auto_link(@fee_url) %></p>
 <hr />
