--- a/app/views/mailer/fee.text.erb
+++ b/app/views/mailer/fee.text.erb
@@ -1,5 +1,5 @@
 Messaggio gestione degli abbonamenti inviato da Fiscosport.
-====<%= l(@type) %>====
+====<%= l(@fee_type) %>====
 Fiscosoprt URL: <%= @fee_url %>
 -------------------------------
 <%= l(@fee_text) %>
