--- a/app/views/fees/email_fee.html.erb
+++ b/app/views/fees/email_fee.html.erb
@@ -1,2 +1,12 @@
-<h1>Fees#EmailFee</h1>
-<p>Find me in app/views/fees/EmailFee.html.erb</p>
+<h2><%=l(:email_fee)%></h2>
+
+
+  In questa pagina:
+  <ul> 
+    <li>Tamplate delle email da rilancio definiti dentro il Setting</li>
+    <li>Incorporare i dati dell'utente e propore HTML da invio</li>
+    <li>Recipients: selezione multiselect tra i utenti - groups -  organismi associati (power user o tutti membri)</li>
+    <li>Editor HTML</li>
+    <li>AZIONE: INVIA</li>
+  </ul> 
+  
