--- a/app/views/fees/invia_fatture.html.erb
+++ b/app/views/fees/invia_fatture.html.erb
@@ -1,2 +1,13 @@
-<h1>Fees#InviaFatture</h1>
-<p>Find me in app/views/fees/InviaFatture.html.erb</p>
+<h2><%=l(:invia_fatture)%></h2>
+
+
+  In questa pagina:
+  <ul> 
+    <li>ricerca utente o organismo associato</li>
+    <li>Lista delle fatture? raddoppio con le pagine di Invoices</li>
+    <li>AZIONE: invia fattura </li>
+    <li>AZIONE: annula fattura (crea GAP<b>**</b>) </li>
+  </ul> 
+  
+<b>**</b><small> --> fare fattura di rettifica per conservare la cronologia della numerotazione) </small>
+
