--- a/app/views/fees/privati.html.erb
+++ b/app/views/fees/privati.html.erb
@@ -1,2 +1,11 @@
-<h1>Fees#Privati</h1>
-<p>Find me in app/views/fees/Privati.html.erb</p>
+<h2><%=l(:list_privati)%></h2>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti con ruolo privato(INVITATO): username, data registrazione, Organismo associato</li>
+    <li>Azione: ROLE_REGISTRATO: inizia la procedura di registrazione</li>
+    <li>Azione: ROLE_SCADUTO cambia ruolo per renderlo scaduto: non è più invitato</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+  </ul> 
+
+
