--- a/app/views/fees/registrati.html.erb
+++ b/app/views/fees/registrati.html.erb
@@ -1,2 +1,12 @@
-<h1>Fees#Registrati</h1>
-<p>Find me in app/views/fees/Registrati.html.erb</p>
+<h2><%=l(:list_registrati)%></h2>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti in stato di registrazione: username, data registrazione, manca x giorni al periodo di prova, data ultimo pagamento</li>
+    <li>Azione: Rilancia</li>
+    <li>Azione: Ha pagato</li>    
+    <li>Azione: ROLE_SCADUTO cambia ruolo per renderlo scaduto</li>
+    <li>Azione: ROLE_ARCHIVIA cambia ruolo per archiviare</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+  </ul> 
+
