--- a/app/views/fees/archiviati.html.erb
+++ b/app/views/fees/archiviati.html.erb
@@ -1,2 +1,10 @@
-<h1>Fees#Archiviati</h1>
-<p>Find me in app/views/fees/Archiviati.html.erb</p>
+<h1><%= l(list_archiviati) %></h1>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti in stato di archiviazione: username, privato o organismo associato, N° pagamenti fatti</li>
+    <li>Azione: Rilancia via EMAIL</li>
+    <li>Azione: Ha pagato</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+  </ul> 
+
