--- a/app/views/fees/associati.html.erb
+++ b/app/views/fees/associati.html.erb
@@ -1,2 +1,11 @@
-<h1>Fees#Associati</h1>
-<p>Find me in app/views/fees/Associati.html.erb</p>
+<h2><%=l(:list_associati)%></h2>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti membri si un organismo associato: username, organismo associato, Data ultimo pagamento Organismo, data scadenza utente/Org.Asso</li>
+    <li>Azione: correggi (verifica la congruenza dell'utente di fronte all'Org.Asso e corregge il ruolo data scadenza)</li>
+    <li>Azione: Org.Asso Ha pagato per conto di tutti</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+    <li>Naviga: vai al dettaglio di un org.Asso</li>
+  </ul> 
+
