--- a/app/views/fees/paganti.html.erb
+++ b/app/views/fees/paganti.html.erb
@@ -1,2 +1,9 @@
-<h1>Fees#Paganti</h1>
-<p>Find me in app/views/fees/Paganti.html.erb</p>
+<h2><%=l(:list_paganti)%></h2>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti privati che paganno: username, Organismo associato, Privato o Numero aderenti(membri), data registrazione, </li>
+    <li>Naviga: vai al dettaglio di un utente - Organismo associato</li>
+  </ul> 
+
+
