--- a/app/views/fees/scaduti.html.erb
+++ b/app/views/fees/scaduti.html.erb
@@ -1,2 +1,11 @@
-<h1>Fees#Scaduti</h1>
-<p>Find me in app/views/fees/Scaduti.html.erb</p>
+<h2><%=l(:list_scaduti)%></h2>
+
+  In questa pagina:
+  <ul> 
+    <li>List utenti in stato di archiviazione: username, data registrazione, data ultimo pagamento</li>
+    <li>Azione: Rilancia</li>
+    <li>Azione: Ha pagato</li>    
+    <li>Azione: ROLE_ARCHIVIA cambia ruolo per archiviare</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+  </ul> 
+
